Initial project setup with controllers, views, and configs
- Added `.gitignore` entries to ignore `lib` folder in `wwwroot`, `node_modules`, and `Utils/ProjectFilesContent.txt`.
- Created `HomeController.cs` with actions for `Index`, `Privacy`, and `Error` views.
- Created `ErrorViewModel.cs` to handle error information.
- Created `PortfolioApp.csproj` to define project structure and target framework.
- Created `PortfolioAppSolution.sln` to define solution structure.
- Created `Program.cs` to set up ASP.NET Core application.
- Created `launchSettings.json` for launch profiles.
- Created `ListFilesWithContent.ps1` script to list files and write content to `Utils/ProjectFilesContent.txt`.
- Created `Index.cshtml`, `Privacy.cshtml`, and `Error.cshtml` for views.
- Created `_Layout.cshtml` and `_Layout.cshtml.css` for main layout and styles.
- Created `_ValidationScriptsPartial.cshtml`, `_ViewImports.cshtml`, and `_ViewStart.cshtml` for view configurations.
- Created `appsettings.Development.json` and `appsettings.json` for configuration.
- Created `PortfolioApp.Tests.csproj` and `UnitTest1.cs` for test project.
- Added `favicon.ico` binary file.
- Created `site.css` and `site.js` for global styles and JavaScript.
- Added `LICENSE` file with MIT License text.

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,12 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Ignore the lib folder in wwwroot
+wwwroot/lib/
+
+# Ignore node_modules
+node_modules/
+
+# Ignore ProjectFilesContent.txt
+/Utils/ProjectFilesContent.txt
